--- a/contact.html
+++ b/contact.html
@@ -5,9 +5,9 @@
 	<title>Artistic Adelicacies</title>
 	<style type="text/css"></style>
 	<link rel="stylesheet" href="mystyles.css" />
-	<link rel="stylesheet" href="style.css" />
 	<link rel="stylesheet" href="instructions.css" />
-<link href="https://fonts.googleapis.com/css?family=Marck+Script" rel="stylesheet"></head>
+	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
+</head>
 <body>
 	<div class="header">
 		<div class="inner">
@@ -15,9 +15,9 @@
 				<a href="index.html"><img src="img/logo.png" alt=""></a>
 			</div>
 			<ul class="menu">
-				<li><a class="selected" href="index.html">Home</a></li>
+				<li><a  href="index.html">Home</a></li>
 				<li><a href="shop.html">Shop</a></li>
-				<li><a href="contact.html">Contact</a></li>
+				<li><a class="selected" href="contact.html">Contact</a></li>
 				<li><a id="show-instructions" href="#">Instructions</a></li>
 			</ul>
 		</div>
@@ -26,14 +26,31 @@
 	<div class="content">
 		<div class="inner">
 		<h1>Welcome to Artistic Adelicacies </h1>
-			
+			<div class="video">
+				<iframe width="560" height="315" src="http://www.youtube.com/embed/Bo11JJgj1cU?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+				<i>This video is from Made With Code by Google</i>
+			</div>
 			<h2>Welcome to Artistic Adelicacies! :)</h2>
-<p> At Artistic Adelicacies, we have many cupcakes for our artistic friends. We have all kinds, but our largest selection is that of art-based cupcakes. We have a variety of paint, craft, and even some DIY stations available!</p>			<ul class="inline">
+<p> At Artistic Adelicacies, we have many cupcakes for our artsy friends. We have all kinds, but our largest selection is that of art-based cupcakes. We have a variety of paint, craft, and even some DIY stations available!</p>			<ul class="inline">
 				<li><img src="img/cupcakes/Arty-Cupcakes-4.jpg" alt="code games" /></li>
 				<li><img src="img/cupcakes/cupcaker.png" alt="build app" /></li>
 				
 			</ul>
-			
+			<h2>Visit us at:</h2>
+			<p>Code Koalas</p>
+			<p>1712 Main Street, #100</p>
+			<p>Kansas City, MO 64108</p><h2>Send e-mail to pinkiepiefunpony@gmail.com:</h2>
+
+<form action="mailto:pinkiepiefunpony@gmail.com" method="post" enctype="text/plain">
+Name:<br>
+<input type="text" name="name"><br>
+E-mail:<br>
+<input type="text" name="mail"><br>
+Comment:<br>
+<input type="text" name="comment" size="50"><br><br>
+<input type="submit" value="Send">
+<input type="reset" value="Reset">
+</form>
 			<h3>Let's Get Started!</h3>
 			<p>Click on the instructions tab in the menu to see the steps you need to take to build your own website! The panel will contain basic instructions with links to learn about the different parts of the website you are changing and creating!</p>
 		</div>
